--- a/email-writer/email-writer-sb/src/main/resources/application.properties
+++ b/email-writer/email-writer-sb/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=email-writer-sb
 
-gemini.api.url=${ Enter your url here }
+gemini.api.url=${GEMINI_URL}
 
-gemini.api.key=${ Enter your key here }
+gemini.api.key=${GEMINI_KEY}
+
+
+
+
+#AIzaSyBW6LuEKoxTdaXBcd5sttMWdakgTg9GnEo
+
+#https://generativelanguage.googleapis.com
+
+#
