fixed gemini issue

--- a/email-writer/email-writer-ext/manifest.json
+++ b/email-writer/email-writer-ext/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Email Writer Assitant",
+    "name": "Email Reply Assitant",
     "description": "AI-powered email reply generator",
     "version": "1.0",
     "manifest_version": 3,
