--- a/email-writer/email-writer-sb/src/main/resources/application.properties
+++ b/email-writer/email-writer-sb/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=email-writer-sb
 
-gemini.api.url=${GEMINI_URL}
-
-gemini.api.key=${GEMINI_KEY}
-
+gemini.api.url= https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent
+#https://generativelanguage.googleapis.com/
+#${GEMINI_URL}
+gemini.api.key=AIzaSyCJfkJCWwZDaazof9XXGlTeSwQQGru2u6U
+#${GEMINI_KEY}
 
 server.port=${PORT:8080}
 server.address=0.0.0.0
